--- a/Main2.html
+++ b/Main2.html
@@ -115,8 +115,8 @@ body{
 	<div data-role="page" id="home" style="background-color: #000000">	
 
 		<div data-role="header" data-theme="b" ><!--data-theme ="b" 테마 색 지정의  -->
-			<a href="Main.html" data-icon="home" rel="external">Main</a>
-        <h3>SunJae Page</h3>
+			<a href="index.html" data-icon="home" rel="external">Main</a>
+        <h3>freesia Page</h3>
 		</div>
 <hr>
 		<div data-role="header" style="text-align:center"  data-theme="c">
@@ -146,7 +146,7 @@ body{
 	           <li><a href="mailto:qkrtjswo03@naver.com" data-icon="mail">E-mail</a></li>
             </ul>
           </div>
-      <h3>Copyright © 2022 PARK, SUNJAE</h3>
+      <h3>Copyright © 2022 freesia</h3>
     </div>
   </div>
 </div>
