--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@ body {
 <div data-role="page" id="page1" style="background-color: black">
     <div data-role="header" data-add-back-btn="true"  data-fullscreen="false" data-position="fixed" data-theme="b" >
        <hr>
-      <h3>SunJae Page</h3>
+      <h3>freesia Page</h3>
        <hr>
     </div>
 
 <div data-role="content"  data-position="fixed" >
     <center>
    
-       <h3><p>HELLO SUNJAE</p></h2>  
+       <h3><p>freesia main</p></h2>  
        <div data-role="content" style="text-align:center"  style="border: 1.5px solid skyblue;">
       <ul data-role="listview" data-inset="true" >
        
@@ -155,7 +155,7 @@ body {
       </ul>
       </div>
       
-      <h3>Copyright © 2022 PARK, SUNJAE</h3>
+      <h3>Copyright © 2022 freesia</h3>
     </div>
    </div>
  
