--- a/mininfo.html
+++ b/mininfo.html
@@ -101,7 +101,7 @@ body {
                     <li><a href="mailto:qkrtjswo03@naver.com" data-icon="mail">E-mail</a></li>
                 </ul>
             </div>
-      <h3>Copyright © 2019 PARK, SUNJAE</h3>
+      <h3>Copyright © 2022 freesia</h3>
     </div>
 	</div>
 	
