--- a/Location.html
+++ b/Location.html
@@ -160,7 +160,7 @@ function showPosition(position) {
                     <li><a href="mailto:qkrtjswo03@naver.com" data-icon="mail">E-mail</a></li>
                 </ul>
             </div>
-      <h3>Copyright © 2019 PARK, SUNJAE</h3>
+      <h3>Copyright © 2022 freesia</h3>
     </div>
 	</div>
 	
@@ -172,7 +172,7 @@ function showPosition(position) {
         <li><a href="mailto:qkrtjswo03@naver.com" target="_blank" data-icon="mail">E-mail</a></li>
                 </ul>
             </div>
-                  <h3>Copyright © 2019 PARK, SUNJAE</h3>
+                  <h3>Copyright © 2022 freesia</h3>
         </div>
 </div>
 
